# visualsign-parser

./: .cla-signed-users  .dockerignore  .gitignore  .gitmodules  Dockerfile  EIGENLAYER_ENHANCEMENTS.md  EIGENLAYER_SUPPORT.md  GOVERNANCE.md  Makefile  QUICKSTART_API.md  README.md  TESTING.md  docker-compose.yml  nginx.conf
.github/: COVERAGE.md  coverage-config.yml
.github/actions/docker-setup/: action.yml
.github/scripts/: check-coverage-thresholds.sh  detect-changed-packages.sh  generate-coverage-diff.sh  get-base-coverage.sh  parse-coverage.sh
.github/workflows/: add-cla-user.yml  cla-file-check.yml  coverage.yml  nightly-jupiter.yml  stagex.yml
api-server/: Cargo.toml  Dockerfile  README.md
api-server/src/: main.rs
images/parser_app/: Containerfile
images/parser_host/: Containerfile
proto/parser/: parser.proto
src/: Cargo.toml  Makefile
src/chain_parsers/visualsign-ethereum/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DECODER_GUIDE.md  WORKSHOP.md  build.rs
src/chain_parsers/visualsign-ethereum/build_src/: gen.rs
src/chain_parsers/visualsign-ethereum/examples/using_abijson/: README.md  TESTING.md
src/chain_parsers/visualsign-ethereum/examples/using_abijson/contracts/: SimpleToken.abi.json  SimpleToken.sol
src/chain_parsers/visualsign-ethereum/src/: abi_decoder.rs  chains.rs  context.rs  embedded_abis.rs  grpc_abi.rs  lib.rs  partial_transaction.rs  registry.rs  token_metadata.rs  visualizer.rs
src/chain_parsers/visualsign-ethereum/src/contracts/: eigenlayer.rs  erc20.rs  mod.rs  uniswap.rs
src/chain_parsers/visualsign-ethereum/src/contracts/core/: erc721.rs  fallback.rs  mod.rs
src/chain_parsers/visualsign-ethereum/src/protocols/: mod.rs
src/chain_parsers/visualsign-ethereum/src/protocols/safe/: config.rs  mod.rs
src/chain_parsers/visualsign-ethereum/src/protocols/safe/contracts/: mod.rs  safe.rs
src/chain_parsers/visualsign-ethereum/src/protocols/uniswap/: IMPLEMENTATION_STATUS.md  config.rs  mod.rs
src/chain_parsers/visualsign-ethereum/src/protocols/uniswap/contracts/: mod.rs  permit2.rs  universal_router.rs  v4_pool.rs
src/chain_parsers/visualsign-ethereum/src/provider/: eip7730.rs  json_abi.rs  mod.rs
src/chain_parsers/visualsign-ethereum/src/utils/: address_utils.rs  decoder_helpers.rs  field_builders_ext.rs  mod.rs
src/chain_parsers/visualsign-ethereum/static/eip7730/: .gitattributes
src/chain_parsers/visualsign-ethereum/tests/: build_gen.rs  lib_test.rs
src/chain_parsers/visualsign-ethereum/tests/fixtures/: 1559.expected  1559.input  legacy.expected  legacy.input  v2swap.expected  v2swap.input
src/chain_parsers/visualsign-ethereum/tests/fixtures/eip7730/: aave_deposit.expected  aave_deposit.input  ledgerquest_mint.expected  ledgerquest_mint.input  paraswap_simpleBuy.expected  paraswap_simpleBuy.input  paraswap_simpleSwap.expected  paraswap_simpleSwap.input
src/chain_parsers/visualsign-ethereum/tests/fixtures/json-abi/: uniswap.expected
src/integration/: Cargo.toml
src/solana_test_utils/: Cargo.toml  NIGHTLY.md  README.md
src/solana_test_utils/config/: pairs_config.toml
src/solana_test_utils/examples/: jupiter_example.md
src/solana_test_utils/src/: lib.rs
src/solana_test_utils/src/common/: accounts.rs  mod.rs  tokens.rs
src/solana_test_utils/src/fixtures/: builder.rs  fixture.rs  manager.rs  mod.rs
src/solana_test_utils/src/nightly/: config.rs  fetcher.rs  mod.rs  report.rs  runner.rs
src/solana_test_utils/src/surfpool/: config.rs  manager.rs  mod.rs
src/solana_test_utils/src/validation/: assertions.rs  mod.rs  validator.rs
src/solana_test_utils/tests/: nightly_jupiter.rs  surfpool_jupiter.rs  surfpool_tests.rs
src/visualsign/: Cargo.toml  README.md
(+105 files in other folders)
