[package]
name = "visualsign-ethereum"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = "1.0.20"
alloy-primitives = "1.0.20"
alloy-eips = "1.0.20"
alloy-rlp = "0.3.12"
base64 = "0.22.1"
hex = "0.4.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
visualsign = { workspace = true }
visualsign-erc7730-adapter = { git = "ssh://git@github.com/anchorageoss/visualsign-erc-7730-adapter.git", branch = "alloy-version-bump-1.0.20" }
once_cell = "1"
include_dir = "0.7"                                                                                                                              # retained temporarily (can be removed if no longer used)
phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
phf_codegen = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
visualsign-erc7730-adapter = { git = "ssh://git@github.com/anchorageoss/visualsign-erc-7730-adapter.git", branch = "alloy-version-bump-1.0.20" }
